zvacsenie hlavneho okna

--- a/ClientProject/Gui/src/main/resources/fxml/PlanItMainWindow.fxml
+++ b/ClientProject/Gui/src/main/resources/fxml/PlanItMainWindow.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="ap" prefHeight="683.0" prefWidth="1213.0" styleClass="ap" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="ap" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1000.0" prefWidth="1920.0" styleClass="ap" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ScrollPane fitToWidth="true" hbarPolicy="NEVER" layoutX="231.0" layoutY="-2.0" vbarPolicy="ALWAYS" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="214.0" AnchorPane.rightAnchor="214.0" AnchorPane.topAnchor="0.0">
+      <ScrollPane fitToWidth="true" hbarPolicy="NEVER" layoutX="280.0" layoutY="-2.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="280.0" AnchorPane.rightAnchor="280.0" AnchorPane.topAnchor="0.0">
          <content>
             <AnchorPane>
                <children>
@@ -22,74 +22,74 @@
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                      </columnConstraints>
                      <rowConstraints>
-                        <RowConstraints minHeight="80.0" vgrow="ALWAYS" />
                         <RowConstraints minHeight="100.0" vgrow="ALWAYS" />
-                        <RowConstraints minHeight="100.0" vgrow="ALWAYS" />
-                        <RowConstraints minHeight="100.0" vgrow="ALWAYS" />
-                        <RowConstraints minHeight="100.0" vgrow="ALWAYS" />
-                        <RowConstraints minHeight="100.0" vgrow="ALWAYS" />
-                        <RowConstraints minHeight="100.0" vgrow="ALWAYS" />
+                        <RowConstraints minHeight="150.0" vgrow="ALWAYS" />
+                        <RowConstraints minHeight="150.0" vgrow="ALWAYS" />
+                        <RowConstraints minHeight="150.0" vgrow="ALWAYS" />
+                        <RowConstraints minHeight="150.0" vgrow="ALWAYS" />
+                        <RowConstraints minHeight="150.0" vgrow="ALWAYS" />
+                        <RowConstraints minHeight="150.0" vgrow="ALWAYS" />
                      </rowConstraints>
                      <children>
                         <Pane styleClass="weekday-header">
                            <children>
-                              <Label fx:id="mondayLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="1.0" layoutY="24.0" prefHeight="40.0" prefWidth="112.0" text="%mondayLabel" textFill="WHITE">
+                              <Label fx:id="mondayLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="1.0" layoutY="24.0" prefHeight="40.0" prefWidth="190.0" text="%mondayLabel" textFill="WHITE">
                                  <font>
-                                    <Font name="System Bold" size="28.0" />
+                                    <Font name="System Bold" size="44.0" />
                                  </font>
                               </Label>
                            </children>
                         </Pane>
                         <Pane styleClass="weekday-header" GridPane.columnIndex="1">
                            <children>
-                              <Label fx:id="tuesdayLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="1.0" layoutY="24.0" prefHeight="40.0" prefWidth="113.0" text="%tuesdayLabel" textFill="WHITE">
+                              <Label fx:id="tuesdayLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="1.0" layoutY="24.0" prefHeight="40.0" prefWidth="190.0" text="%tuesdayLabel" textFill="WHITE">
                                  <font>
-                                    <Font name="System Bold" size="28.0" />
+                                    <Font name="System Bold" size="44.0" />
                                  </font>
                               </Label>
                            </children>
                         </Pane>
                         <Pane styleClass="weekday-header" GridPane.columnIndex="2">
                            <children>
-                              <Label fx:id="wednesdayLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="-1.0" layoutY="24.0" prefHeight="40.0" prefWidth="114.0" text="%wednesdayLabel" textFill="WHITE">
+                              <Label fx:id="wednesdayLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="-1.0" layoutY="24.0" prefHeight="40.0" prefWidth="190.0" text="%wednesdayLabel" textFill="WHITE">
                                  <font>
-                                    <Font name="System Bold" size="28.0" />
+                                    <Font name="System Bold" size="44.0" />
                                  </font>
                               </Label>
                            </children>
                         </Pane>
                         <Pane styleClass="weekday-header" GridPane.columnIndex="3">
                            <children>
-                              <Label fx:id="thursdayLabel" alignment="CENTER" contentDisplay="CENTER" layoutY="24.0" prefHeight="40.0" prefWidth="113.0" text="%thursdayLabel" textFill="WHITE">
+                              <Label fx:id="thursdayLabel" alignment="CENTER" contentDisplay="CENTER" layoutY="24.0" prefHeight="40.0" prefWidth="190.0" text="%thursdayLabel" textFill="WHITE">
                                  <font>
-                                    <Font name="System Bold" size="28.0" />
+                                    <Font name="System Bold" size="44.0" />
                                  </font>
                               </Label>
                            </children>
                         </Pane>
                         <Pane styleClass="weekday-header" GridPane.columnIndex="4">
                            <children>
-                              <Label fx:id="fridayLabel" alignment="CENTER" contentDisplay="CENTER" layoutY="24.0" prefHeight="40.0" prefWidth="112.0" text="%fridayLabel" textFill="WHITE">
+                              <Label fx:id="fridayLabel" alignment="CENTER" contentDisplay="CENTER" layoutY="24.0" prefHeight="40.0" prefWidth="190.0" text="%fridayLabel" textFill="WHITE">
                                  <font>
-                                    <Font name="System Bold" size="28.0" />
+                                    <Font name="System Bold" size="44.0" />
                                  </font>
                               </Label>
                            </children>
                         </Pane>
                         <Pane styleClass="weekday-header" GridPane.columnIndex="5">
                            <children>
-                              <Label fx:id="saturdayLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="1.0" layoutY="25.0" prefHeight="38.0" prefWidth="111.0" text="%saturdayLabel" textFill="WHITE">
+                              <Label fx:id="saturdayLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="1.0" layoutY="25.0" prefHeight="38.0" prefWidth="190.0" text="%saturdayLabel" textFill="WHITE">
                                  <font>
-                                    <Font name="System Bold" size="26.0" />
+                                    <Font name="System Bold" size="44.0" />
                                  </font>
                               </Label>
                            </children>
                         </Pane>
                         <Pane styleClass="weekday-header" GridPane.columnIndex="6">
                            <children>
-                              <Label fx:id="sundayLabel" alignment="CENTER" contentDisplay="CENTER" layoutY="24.0" prefHeight="40.0" prefWidth="113.0" text="%sundayLabel" textFill="WHITE">
+                              <Label fx:id="sundayLabel" alignment="CENTER" contentDisplay="CENTER" layoutY="24.0" prefHeight="40.0" prefWidth="190.0" text="%sundayLabel" textFill="WHITE">
                                  <font>
-                                    <Font name="System Bold" size="28.0" />
+                                    <Font name="System Bold" size="44.0" />
                                  </font>
                               </Label>
                            </children>
@@ -141,27 +141,27 @@
                </children></AnchorPane>
          </content>
       </ScrollPane>
-      <Label fx:id="yearLabel" layoutX="1087.0" layoutY="93.0" text="2020" AnchorPane.leftAnchor="1087.0" AnchorPane.rightAnchor="86.79999999999995">
+      <Label fx:id="yearLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="1752.0" layoutY="112.0" prefHeight="27.0" prefWidth="54.0" text="2020" AnchorPane.leftAnchor="1752.0" AnchorPane.rightAnchor="114.0">
          <font>
-            <Font size="18.0" />
+            <Font size="24.0" />
          </font>
       </Label>
-      <Button fx:id="yearBack" layoutX="1038.0" layoutY="83.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="42.0" style="-fx-background-color: transparent;" text="&lt;">
+      <Button fx:id="yearBack" layoutX="1703.0" layoutY="104.0" mnemonicParsing="false" style="-fx-background-color: transparent;" text="&lt;">
          <font>
-            <Font size="20.0" />
+            <Font size="24.0" />
          </font>
       </Button>
-      <Button fx:id="yearForward" layoutX="1135.0" layoutY="84.0" mnemonicParsing="false" style="-fx-background-color: transparent;" text="&gt;">
+      <Button fx:id="yearForward" layoutX="1806.0" layoutY="104.0" mnemonicParsing="false" style="-fx-background-color: transparent;" text="&gt;">
          <font>
-            <Font size="20.0" />
+            <Font size="24.0" />
          </font></Button>
-      <ListView fx:id="monthsList" layoutX="1020.0" layoutY="140.0" prefHeight="279.0" prefWidth="174.0" />
-      <Label fx:id="monthLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="1000.0" layoutY="39.0" prefHeight="35.0" prefWidth="211.0" text="April">
+      <ListView fx:id="monthsList" layoutX="1673.0" layoutY="159.0" prefHeight="356.0" prefWidth="211.0" />
+      <Label fx:id="monthLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="1673.0" layoutY="58.0" prefHeight="35.0" prefWidth="211.0" text="April">
          <font>
-            <Font name="System Bold" size="24.0" />
+            <Font name="System Bold" size="36.0" />
          </font>
       </Label>
-      <Button fx:id="addEventButton" alignment="CENTER" contentDisplay="CENTER" layoutX="7.0" layoutY="86.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="199.0" text="%addEventButton">
+      <Button fx:id="addEventButton" alignment="CENTER" contentDisplay="CENTER" layoutX="14.0" layoutY="134.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="260.0" text="%addEventButton">
          <font>
             <Font size="18.0" />
          </font>
@@ -170,7 +170,7 @@
             <String fx:value="menu-button" />
          </styleClass>
       </Button>
-      <Button fx:id="changeLanguageButton" alignment="CENTER" contentDisplay="CENTER" layoutX="6.0" layoutY="606.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="199.0" text="%changeLanguageButton">
+      <Button fx:id="changeLanguageButton" alignment="CENTER" contentDisplay="CENTER" layoutX="14.0" layoutY="883.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="260.0" text="%changeLanguageButton">
          <font>
             <Font size="18.0" />
          </font>
@@ -179,7 +179,7 @@
             <String fx:value="menu-button" />
          </styleClass>
       </Button>
-      <Button fx:id="savePdfButton" alignment="CENTER" contentDisplay="CENTER" layoutX="6.0" layoutY="140.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="199.0" text="%exportPdfButton">
+      <Button fx:id="savePdfButton" alignment="CENTER" contentDisplay="CENTER" layoutX="14.0" layoutY="206.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="260.0" text="%exportPdfButton">
          <font>
             <Font size="18.0" />
          </font>
@@ -187,7 +187,7 @@
             <String fx:value="control-button" />
             <String fx:value="menu-button" />
          </styleClass></Button>
-      <Button fx:id="logoutButton" alignment="CENTER" contentDisplay="CENTER" layoutX="6.0" layoutY="556.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="199.0" text="%logoutButton">
+      <Button fx:id="logoutButton" alignment="CENTER" contentDisplay="CENTER" layoutX="14.0" layoutY="811.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="260.0" text="%logoutButton">
          <font>
             <Font size="18.0" />
          </font>
