--- a/ClientProject/Gui/src/main/resources/fxml/PlanItAddEvent.fxml
+++ b/ClientProject/Gui/src/main/resources/fxml/PlanItAddEvent.fxml
@@ -36,25 +36,25 @@
             <Font size="16.0" />
          </font>
       </Label>
-      <TextField fx:id="alertField" layoutX="245.0" layoutY="278.0" prefHeight="26.0" prefWidth="119.0" AnchorPane.leftAnchor="245.0" AnchorPane.rightAnchor="339.8" />
-      <TextField fx:id="endsField" layoutX="245.0" layoutY="230.0" prefHeight="26.0" prefWidth="119.0" AnchorPane.leftAnchor="245.0" AnchorPane.rightAnchor="339.8" />
-      <TextField fx:id="startsField" layoutX="245.0" layoutY="185.0" prefHeight="26.0" prefWidth="119.0" AnchorPane.leftAnchor="245.0" AnchorPane.rightAnchor="339.8" />
-      <DatePicker fx:id="startsDateField" layoutX="415.0" layoutY="184.0" prefHeight="26.0" prefWidth="178.0" AnchorPane.rightAnchor="111.0" />
+      <TextField fx:id="alertField" layoutX="245.0" layoutY="278.0" prefHeight="26.0" prefWidth="119.0" />
+      <TextField fx:id="endsField" layoutX="245.0" layoutY="230.0" prefHeight="26.0" prefWidth="119.0" />
+      <TextField fx:id="startsField" layoutX="245.0" layoutY="185.0" prefHeight="26.0" prefWidth="119.0" />
+      <DatePicker fx:id="startsDateField" layoutX="415.0" layoutY="184.0" prefHeight="26.0" prefWidth="178.0" />
       <TextField fx:id="locationField" layoutX="215.0" layoutY="138.0" prefHeight="26.0" prefWidth="443.0" />
-      <Button fx:id="startsDecrement" layoutX="215.0" layoutY="185.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="-" AnchorPane.leftAnchor="215.0" />
-      <Button fx:id="startsIncrement" layoutX="365.0" layoutY="185.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="+" AnchorPane.rightAnchor="309.0" />
-      <Button fx:id="endsDecrement" layoutX="215.0" layoutY="230.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="-" AnchorPane.leftAnchor="215.0" />
-      <Button fx:id="endsIncrement" layoutX="365.0" layoutY="230.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="+" AnchorPane.rightAnchor="309.0" />
-      <Button fx:id="alertsDecrement" layoutX="215.0" layoutY="279.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="-" AnchorPane.leftAnchor="215.0" />
-      <Button fx:id="alertsIncrement" layoutX="367.0" layoutY="278.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="+" />
+      <Button fx:id="startsDecrement" alignment="CENTER" contentDisplay="CENTER" layoutX="215.0" layoutY="185.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="-" />
+      <Button fx:id="startsIncrement" alignment="CENTER" contentDisplay="CENTER" layoutX="365.0" layoutY="185.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="+" />
+      <Button fx:id="endsDecrement" alignment="CENTER" contentDisplay="CENTER" layoutX="215.0" layoutY="230.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="-" />
+      <Button fx:id="endsIncrement" alignment="CENTER" contentDisplay="CENTER" layoutX="365.0" layoutY="230.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="+" />
+      <Button fx:id="alertsDecrement" alignment="CENTER" contentDisplay="CENTER" layoutX="215.0" layoutY="279.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="-" />
+      <Button fx:id="alertsIncrement" alignment="CENTER" contentDisplay="CENTER" layoutX="367.0" layoutY="278.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="+" />
       <Label fx:id="startsError" layoutX="215.0" layoutY="211.0" text="%timeErrorLabel" textFill="RED" visible="false" />
       <Label fx:id="endsError" layoutX="215.0" layoutY="259.0" text="%timeErrorLabel" textFill="RED" visible="false" />
       <Label fx:id="alertsError" layoutX="215.0" layoutY="304.0" text="%timeErrorLabel" textFill="RED" visible="false" />
       <Label fx:id="titleError" layoutX="214.0" layoutY="117.0" text="%titleErrorLabel" textFill="RED" visible="false" />
       <TextArea fx:id="titleField" layoutX="215.0" layoutY="47.0" prefHeight="70.0" prefWidth="443.0" />
       <TextArea fx:id="descriptionField" layoutX="216.0" layoutY="325.0" prefHeight="167.0" prefWidth="443.0" />
-      <DatePicker fx:id="endsDateField" layoutX="415.0" layoutY="230.0" prefHeight="26.0" prefWidth="178.0" AnchorPane.leftAnchor="415.0" AnchorPane.rightAnchor="110.60000000000002" />
-      <DatePicker fx:id="alertDateField" layoutX="415.0" layoutY="278.0" prefHeight="26.0" prefWidth="178.0" AnchorPane.rightAnchor="111.0" />
+      <DatePicker fx:id="endsDateField" layoutX="415.0" layoutY="230.0" prefHeight="26.0" prefWidth="178.0" />
+      <DatePicker fx:id="alertDateField" layoutX="415.0" layoutY="278.0" prefHeight="26.0" prefWidth="178.0" />
       <Button fx:id="saveButton" layoutX="282.0" layoutY="509.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="89.0" styleClass="control-button" text="%saveButton">
          <font>
             <Font size="14.0" />
