--- a/ClientProject/Gui/src/main/resources/fxml/PlanItRegistration.fxml
+++ b/ClientProject/Gui/src/main/resources/fxml/PlanItRegistration.fxml
@@ -4,43 +4,43 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="ap" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="391.0" prefWidth="496.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="ap" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="425.0" prefWidth="510.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="111.0" layoutY="41.0" text="%registrationLabel">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="107.0" layoutY="35.0" text="%registrationLabel">
          <font>
             <Font size="36.0" />
          </font>
       </Label>
-      <Label layoutX="111.0" layoutY="161.0" text="%firstnameLabel">
+      <Label layoutX="96.0" layoutY="171.0" text="%firstnameLabel">
          <font>
-            <Font size="14.0" />
+            <Font size="18.0" />
          </font>
       </Label>
-      <Label layoutX="112.0" layoutY="198.0" text="%lastnameLabel">
+      <Label layoutX="96.0" layoutY="215.0" text="%lastnameLabel">
          <font>
-            <Font size="14.0" />
+            <Font size="18.0" />
          </font>
       </Label>
-      <Label layoutX="112.0" layoutY="239.0" text="%usernameLabel">
+      <Label layoutX="94.0" layoutY="258.0" text="%usernameLabel">
          <font>
-            <Font size="14.0" />
+            <Font size="18.0" />
          </font>
       </Label>
-      <Label layoutX="112.0" layoutY="274.0" text="%passwordLabel">
+      <Label layoutX="95.0" layoutY="299.0" text="%passwordLabel">
          <font>
-            <Font size="14.0" />
+            <Font size="18.0" />
          </font>
       </Label>
-      <TextField fx:id="textfieldFirstName" layoutX="235.0" layoutY="158.0" />
-      <TextField fx:id="textfieldLastName" layoutX="235.0" layoutY="195.0" />
-      <TextField fx:id="textfieldUserName" layoutX="235.0" layoutY="236.0" />
-      <PasswordField fx:id="textfieldUserpassword" layoutX="235.0" layoutY="271.0" />
-      <Label layoutX="58.0" layoutY="117.0" text="%detailsLabel">
+      <TextField fx:id="textfieldFirstName" layoutX="255.0" layoutY="173.0" />
+      <TextField fx:id="textfieldLastName" layoutX="255.0" layoutY="216.0" />
+      <TextField fx:id="textfieldUserName" layoutX="255.0" layoutY="260.0" />
+      <PasswordField fx:id="textfieldUserpassword" layoutX="255.0" layoutY="301.0" />
+      <Label layoutX="40.0" layoutY="112.0" text="%detailsLabel">
          <font>
-            <Font size="14.0" />
+            <Font size="20.0" />
          </font>
       </Label>
-      <Button fx:id="buttonRegister" layoutX="150.0" layoutY="330.0" mnemonicParsing="false" prefWidth="100.0" styleClass="control-button" text="%registerButton" />
-      <Button fx:id="buttonCancel" layoutX="259.0" layoutY="330.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" styleClass="control-button" text="%cancelButton" />
+      <Button fx:id="buttonRegister" layoutX="135.0" layoutY="368.0" mnemonicParsing="false" prefWidth="120.0" styleClass="control-button" text="%registerButton" />
+      <Button fx:id="buttonCancel" layoutX="269.0" layoutY="368.0" mnemonicParsing="false" prefWidth="120.0" styleClass="control-button" text="%cancelButton" />
    </children>
 </AnchorPane>
