rozne farby pre kazdy typ, uprava kalendara - horizontalne zvacsovanie

--- a/ClientProject/Gui/src/main/resources/css/styles.css
+++ b/ClientProject/Gui/src/main/resources/css/styles.css
@@ -3,8 +3,19 @@
 }
 
 .event-label {
-    -fx-text-fill: #3F87D5;
     -fx-font-weight: bold;
+}
+
+.free-time-label {
+    -fx-text-fill: #03fc13;
+}
+
+.work-label {
+    -fx-text-fill: #fc0303;
+}
+
+.school-label {
+    -fx-text-fill: #3F87D5;
 }
 
 .control-button {
