--- a/ClientProject/Gui/src/main/resources/fxml/PlanItAddEvent.fxml
+++ b/ClientProject/Gui/src/main/resources/fxml/PlanItAddEvent.fxml
@@ -51,8 +51,8 @@
       <Label fx:id="endsError" layoutX="302.0" layoutY="333.0" text="%timeErrorLabel" textFill="RED" visible="false" />
       <Label fx:id="alertsError" layoutX="302.0" layoutY="380.0" text="%timeErrorLabel" textFill="RED" visible="false" />
       <Label fx:id="titleError" layoutX="259.0" layoutY="143.0" text="%titleErrorLabel" textFill="RED" visible="false" />
-      <TextArea fx:id="titleField" layoutX="258.0" layoutY="47.0" prefHeight="96.0" prefWidth="443.0" />
-      <TextArea fx:id="descriptionField" layoutX="258.0" layoutY="395.0" prefHeight="167.0" prefWidth="443.0" />
+      <TextArea fx:id="titleField" layoutX="258.0" layoutY="47.0" prefHeight="96.0" prefWidth="443.0" wrapText="true" />
+      <TextArea fx:id="descriptionField" layoutX="258.0" layoutY="395.0" prefHeight="167.0" prefWidth="443.0" wrapText="true" />
       <DatePicker fx:id="endsDateField" layoutX="490.0" layoutY="306.0" prefHeight="26.0" prefWidth="178.0" />
       <DatePicker fx:id="alertDateField" layoutX="489.0" layoutY="351.0" prefHeight="26.0" prefWidth="178.0" />
       <Button fx:id="saveButton" layoutX="278.0" layoutY="582.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="110.0" styleClass="control-button" text="%saveButton">
