--- a/ClientProject/Gui/src/main/resources/css/styles.css
+++ b/ClientProject/Gui/src/main/resources/css/styles.css
@@ -49,3 +49,9 @@
 .weekday-header {
     -fx-background-color:  #008385
 }
+
+.weekday-header-label {
+    -fx-font-weight: bold;
+    -fx-text-fill: #FFFFFF;
+    -fx-font-size: 44px;
+}
