--- a/ClientProject/Gui/src/main/resources/fxml/PlanItAddEvent.fxml
+++ b/ClientProject/Gui/src/main/resources/fxml/PlanItAddEvent.fxml
@@ -9,11 +9,11 @@
     <children>
         <HBox layoutX="33.0" layoutY="32.0" prefHeight="559.0" prefWidth="1436.0">
             <children>
-                <VBox fx:id="detailBox" prefHeight="559.0" prefWidth="747.0">
+                <VBox fx:id="detailBox" prefHeight="559.0" prefWidth="830.0">
                     <children>
                         <HBox fx:id="titleRow" prefHeight="100.0" prefWidth="746.0">
                             <children>
-                                <HBox prefHeight="100.0" prefWidth="235.0">
+                                <HBox prefHeight="100.0" prefWidth="215.0">
                                     <children>
                                         <Label text="%titleLabel">
                                             <font>
@@ -22,16 +22,16 @@
                                         </Label>
                                     </children>
                                 </HBox>
-                                <HBox prefHeight="100.0" prefWidth="448.0">
-                                    <children>
+                        <HBox prefHeight="100.0" prefWidth="450.0">
+                           <children>
                                         <TextArea fx:id="titleField" prefHeight="100.0" prefWidth="450.0" wrapText="true" />
-                                    </children>
-                                </HBox>
+                           </children>
+                        </HBox>
                             </children>
                         </HBox>
                         <HBox prefHeight="30.0" prefWidth="746.0">
                             <children>
-                                <HBox prefHeight="100.0" prefWidth="235.0">
+                                <HBox prefHeight="100.0" prefWidth="215.0">
                                     <children>
                                         <Label text="%typeLabel">
                                             <font>
@@ -52,7 +52,7 @@
                         </HBox>
                         <HBox prefHeight="30.0" prefWidth="746.0" styleClass="detail-row">
                             <children>
-                                <HBox prefHeight="87.0" prefWidth="235.0">
+                                <HBox prefHeight="87.0" prefWidth="215.0">
                                     <children>
                                         <Label text="%locationLabel">
                                             <font>
@@ -73,7 +73,7 @@
                         </HBox>
                         <HBox fx:id="startsRow" prefHeight="30.0" prefWidth="200.0" styleClass="detail-row">
                             <children>
-                                <HBox prefHeight="100.0" prefWidth="235.0">
+                                <HBox prefHeight="100.0" prefWidth="215.0">
                                     <children>
                                         <Label text="%startsLabel">
                                             <font>
@@ -102,7 +102,7 @@
                      </VBox.margin></HBox>
                         <HBox fx:id="endsRow" prefHeight="30.0" prefWidth="200.0" styleClass="detail-row">
                             <children>
-                                <HBox prefHeight="100.0" prefWidth="235.0">
+                                <HBox prefHeight="100.0" prefWidth="215.0">
                                     <children>
                                         <Label text="%endsLabel">
                                             <font>
@@ -131,7 +131,7 @@
                      </VBox.margin></HBox>
                         <HBox fx:id="alertRow" prefHeight="30.0" prefWidth="200.0" styleClass="detail-row">
                             <children>
-                                <HBox prefHeight="100.0" prefWidth="235.0">
+                                <HBox prefHeight="100.0" prefWidth="215.0">
                                     <children>
                                         <Label text="%alertLabel">
                                             <font>
@@ -160,7 +160,7 @@
                      </VBox.margin></HBox>
                         <HBox prefHeight="150.0" prefWidth="200.0" styleClass="detail-row">
                             <children>
-                                <HBox prefHeight="100.0" prefWidth="235.0">
+                                <HBox prefHeight="100.0" prefWidth="215.0">
                                     <children>
                                         <Label text="%descriptionLabel">
                                             <font>
@@ -180,7 +180,69 @@
                      </VBox.margin></HBox>
                     </children>
                 </VBox>
-                <VBox fx:id="repetitionVBox" prefHeight="559.0" prefWidth="694.0" />
+                <VBox fx:id="repetitionBox" prefHeight="559.0" prefWidth="660.0">
+               <children>
+                  <HBox prefHeight="30.0" prefWidth="200.0">
+                     <children>
+                        <HBox prefHeight="100.0" prefWidth="130.0">
+                           <children>
+                              <Label text="Start">
+                                 <font>
+                                    <Font size="20.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </HBox>
+                        <HBox prefHeight="100.0" prefWidth="450.0">
+                           <children>
+                              <DatePicker fx:id="repetitionStartField" />
+                           </children>
+                        </HBox>
+                     </children>
+                  </HBox>
+                  <HBox prefHeight="30.0" prefWidth="200.0">
+                     <children>
+                        <HBox prefHeight="100.0" prefWidth="130.0">
+                           <children>
+                              <Label text="Type">
+                                 <font>
+                                    <Font size="20.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </HBox>
+                        <HBox prefHeight="100.0" prefWidth="450.0">
+                           <children>
+                              <ChoiceBox fx:id="repetitionTypeSelector" prefHeight="26.0" prefWidth="175.0" />
+                           </children>
+                        </HBox>
+                     </children>
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
+                  </HBox>
+                  <HBox prefHeight="30.0" prefWidth="200.0">
+                     <children>
+                        <HBox prefHeight="100.0" prefWidth="130.0">
+                           <children>
+                              <Label text="End">
+                                 <font>
+                                    <Font size="20.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </HBox>
+                        <HBox prefHeight="100.0" prefWidth="450.0">
+                           <children>
+                              <DatePicker fx:id="repetitionEndField" />
+                           </children>
+                        </HBox>
+                     </children>
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
+                  </HBox>
+               </children></VBox>
             </children>
         </HBox>
         <HBox layoutX="268.0" layoutY="617.0" prefHeight="30.0" prefWidth="309.0">
