--- a/ClientProject/Gui/src/main/resources/fxml/LanguageSelector.fxml
+++ b/ClientProject/Gui/src/main/resources/fxml/LanguageSelector.fxml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane fx:id="ap" prefHeight="250.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
-
+<AnchorPane fx:id="ap" prefHeight="250.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" >
 </AnchorPane>
