--- a/ClientProject/Gui/src/main/resources/fxml/PlanItAddEvent.fxml
+++ b/ClientProject/Gui/src/main/resources/fxml/PlanItAddEvent.fxml
@@ -265,7 +265,7 @@
                 </Button>
             </children>
         </HBox>
-      <Button fx:id="repetitionButton" layoutX="840.0" layoutY="619.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="110.0" styleClass="control-button" text="Repeat">
+      <Button fx:id="repetitionButton" layoutX="840.0" layoutY="619.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="220.0" styleClass="control-button" text="%repetitionButton">
          <font>
             <Font size="14.0" />
          </font>
